<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.paint.searchrepo.ui.base.auth.AuthViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/logo_github"
                app:layout_constraintBottom_toTopOf="@+id/etLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </ImageView>

            <EditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:ems="10"
                android:hint="@string/input_login"
                android:text="@={viewModel.login}"
                app:layout_constraintBottom_toTopOf="@+id/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:ems="10"
                android:hint="@string/input_pass"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                app:layout_constraintBottom_toTopOf="@+id/btnEnter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.login()}"
                android:text="@string/enter"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@+id/tvOr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                app:layout_constraintBottom_toTopOf="@+id/btnWithout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/btnWithout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_20"
                android:onClick="@{() -> viewModel.enterWithoutAuth()}"
                android:text="@string/without_auth"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_marginTop="@dimen/dp_20"
                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>